[gd_scene load_steps=21 format=3 uid="uid://ddf0m4kbrg0go"]

[ext_resource type="Script" uid="uid://d003tgo4vrak8" path="res://components/enemy/enemy.gd" id="1_qr8xe"]
[ext_resource type="Texture2D" uid="uid://druyn27ooy4ic" path="res://assets/SpriteSheets/Enemy_2_attack.png" id="2_05s6o"]
[ext_resource type="Texture2D" uid="uid://dkwobp4ihlmcm" path="res://assets/SpriteSheets/Enemy_2_hit.png" id="3_anlw3"]
[ext_resource type="Texture2D" uid="uid://birral6frl3rn" path="res://assets/SpriteSheets/Enemy_2_idle.png" id="4_u64o8"]
[ext_resource type="Texture2D" uid="uid://c3p66ehi05acr" path="res://assets/SpriteSheets/Enemy_2_move.png" id="5_roo12"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xxtfg"]
atlas = ExtResource("2_05s6o")
region = Rect2(0, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lvoy"]
atlas = ExtResource("2_05s6o")
region = Rect2(38, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ck2y"]
atlas = ExtResource("2_05s6o")
region = Rect2(76, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlj62"]
atlas = ExtResource("2_05s6o")
region = Rect2(114, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo2gh"]
atlas = ExtResource("2_05s6o")
region = Rect2(152, 0, 38, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmy8y"]
atlas = ExtResource("3_anlw3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynkbq"]
atlas = ExtResource("4_u64o8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td40n"]
atlas = ExtResource("4_u64o8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_welq4"]
atlas = ExtResource("5_roo12")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_meajw"]
atlas = ExtResource("5_roo12")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q4uo"]
atlas = ExtResource("5_roo12")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xpc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxtfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lvoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ck2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlj62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo2gh")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 3.01,
"texture": SubResource("AtlasTexture_mmy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynkbq")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td40n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_welq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meajw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q4uo")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kii40"]
size = Vector2(39, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cepcq"]
size = Vector2(44, 52.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_meajw"]
radius = 29.0
height = 60.0

[node name="Enemy_2" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 5
floor_constant_speed = true
floor_snap_length = 32.0
script = ExtResource("1_qr8xe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -28.75)
scale = Vector2(1.796875, 1.828125)
sprite_frames = SubResource("SpriteFrames_2xpc5")
animation = &"hit"
autoplay = "walk"
frame_progress = 0.48860723

[node name="LeftRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-16, 0)
collision_mask = 5

[node name="RightRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(16, 0)
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -29)
shape = SubResource("RectangleShape2D_kii40")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2(0, -106)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 80)
shape = SubResource("RectangleShape2D_cepcq")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-4, -27)
shape = SubResource("CapsuleShape2D_meajw")

[node name="AttackCooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
